Fancy formatting that fixes the issue with dark themes on GTK/Linux (#7)
* Made background blue, text white, and text bold

* Added header

* Darkened colours; added a gradient; made width smaller

* Made speech bubble colour header background; changed to use system dialog and MenuHover colours

* Changed theme to moz-Dialog

--- a/browserAction.html
+++ b/browserAction.html
@@ -6,15 +6,35 @@
     <title>Polyfiller</title>
     <style>
         html, body {
-            width: 500px;
-            margin: 5px;
+            width: 405px;
+            margin: 0px;
+	    padding: 0px;
             box-sizing: border-box;
+	    color: -moz-DialogText;
+	    background-color: -moz-Dialog;
+	    font-weight: bold;
         }
+	header {
+	    background-color: transparent;
+	    padding: 0px 5px;
+	    margin: 0px;
+	}
+	h1 {
+	    margin: 5px 5px;
+	    padding: 0px initial;
+	    font-weight: bold;
+	}
+	main {
+	    padding: 0px 5px 5px;
+	}
 
     </style>
 </head>
 <body>
-<script src="browserAction.js"></script>
+  <header><h1>Polly</h1></header>
+  <main>
+    <script src="browserAction.js"></script>
+  </main>
 
 </body>
 </html>
